<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#31BFDB"
    tools:context=".LoginActivity">


    <LinearLayout
        android:id="@+id/layoutLoginName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layoutLoginEditText"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etLoginUsername"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:autofillHints=""
            android:background="@drawable/et_rounded"
            android:backgroundTint="#4BFFFFFF"
            android:drawableLeft="@drawable/ic_outline_email_24"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:drawablePadding="15dp"
            android:textColor="#FFFFFF"
            tools:text="Email Address" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layoutLoginEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/etLoginPassword"
            android:drawableLeft="@drawable/ic_baseline_person_outline_24"
            android:drawablePadding="10dp"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="@drawable/et_rounded"
            android:backgroundTint="#4DFFFFFF"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="#FFFFFF"
            tools:text="Password" />
    </LinearLayout>

    <TextView
        android:id="@+id/btnSignUpLoginAct"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_rounded"
        android:gravity="center"
        android:text="@string/signUp"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/btnLogin"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/layoutLoginEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="71dp"
        android:background="@drawable/btn_rounded"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="122dp"
        android:fontFamily="@font/dekko"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        tools:layout_editor_absoluteX="128dp"
        tools:layout_editor_absoluteY="115dp" />

</RelativeLayout>